# audioreach-pal

./: Android.mk  Makefile.am  PalCommon.h  configure.ac  pal.pc.in
.github/workflows/: pre_merge_build.yml  qcom-preflight-checks.yml
ci/: build.sh  knp_build.sh  pkl_build.sh  pre_build.sh
configs/qcom/IoT/Kaanapali/: mixer_paths_Kaanapali_MTP.xml  resourcemanager_Kaanapali_MTP.xml
configs/qcom/IoT/MAHUA/: resourcemanager_MAHUA_CRD.xml
configs/qcom/IoT/bengal/: resourcemanager_scubaidp.xml
configs/qcom/IoT/kalama/: resourcemanager_kalama_cdp.xml  resourcemanager_kalama_grd.xml  resourcemanager_kalama_mtp.xml  resourcemanager_kalama_qrd.xml
configs/qcom/IoT/monaco/: resourcemanager_monaco_idp.xml  resourcemanager_monaco_idp_amic.xml  resourcemanager_monaco_idp_slate.xml  resourcemanager_monaco_idp_slate_wsa.xml  resourcemanager_monaco_idp_wsa.xml
configs/qcom/IoT/pineapple/: resourcemanager_cliffs_cdp.xml  resourcemanager_cliffs_mtp.xml  resourcemanager_cliffs_mtp_wcd9395.xml  resourcemanager_cliffs_qrd.xml  resourcemanager_pineapple_aim.xml  resourcemanager_pineapple_cdp.xml  resourcemanager_pineapple_mtp.xml  resourcemanager_pineapple_qrd.xml  resourcemanager_pineapple_qrd_sku2.xml
configs/qcom/IoT/qcm6490/: resourcemanager_qcm6490_idp.xml  resourcemanager_qcm6490_rb3.xml  resourcemanager_qcm6490_rb3_vc.xml
configs/qcom/IoT/qcs615/: mixer_paths_TALOS_EVK.xml  resourcemanager_TALOS_EVK.xml
configs/qcom/IoT/qcs8300/: resourcemanager_MONACO_EVK.xml
configs/qcom/IoT/qcs9075/: resourcemanager_LEMANS_EVK.xml
configs/qcom/IoT/qcs9100/: resourcemanager_qcs9100_ridesx.xml
configs/qcom/IoT/shikra/: mixer_paths_Shikra-CQM-EVK.xml  resourcemanager_Shikra-CQM_EVK.xml  resourcemanager_Shikra-CQS-EVK.xml
configs/qcom/IoT/sm8750/: mixer_paths_SM8750_MTP.xml  resourcemanager_SM8750_MTP.xml
configs/qcom/IoT/x1e80100/: mixer_paths_X1E80100_EVK.xml  resourcemanager_X1E80100_CRD.xml  resourcemanager_X1E80100_EVK.xml
configs/qcom/compute/hamoa_la/: Hapticsconfig.xml  card-defs.xml  mcs_defs_hamoa_x1e80100_crd_wsa884x.xml  mixer_paths_hamoa_x1e80100_crd_wsa884x.xml  plugin_manager.xml  resourcemanager_hamoa_x1e80100_crd_wsa884x.xml  usecaseKvManager.xml
configs/qcom/mobile/art/: Hapticsconfig.xml  card-defs.xml  mixer_paths_art_cdp.xml  mixer_paths_art_mtp.xml  mixer_paths_art_mtp_qmp.xml  mixer_paths_art_qrd.xml  mixer_paths_art_qrd_qmp.xml  mixer_paths_pebble_cdp.xml  mixer_paths_pebble_mtp_qmp.xml  mixer_paths_pebble_mtp_wcd9378.xml  resourcemanager_art_cdp.xml  resourcemanager_art_mtp.xml  resourcemanager_art_mtp_qmp.xml  resourcemanager_art_qrd.xml  resourcemanager_art_qrd_qmp.xml  usecaseKvManager.xml
configs/x1e80100/: mixer_paths_X1E80100_CRD.xml
context_manager/inc/: ContextManager.h
context_manager/src/: ContextManager.cpp
device/Bluetooth/: Android.mk  Makefile.am
device/Bluetooth/inc/: Bluetooth.h
device/Bluetooth/internal/: BTHostAndroidWrapper.cpp  BTHostAndroidWrapper.h  HFPProfile.cpp  HFPProfile.h
device/Bluetooth/src/: Bluetooth.cpp
device/Speaker/: Makefile.am
device/Speaker/src/: SpeakerProtection.cpp
inc/: PalDefs.h
plugins/codecs/: bt_ble.c  bt_intf.h
plugins/configs/qcom/IoT/default/ConfigSessionAlsaCompress/: Makefile.am
plugins/configs/qcom/IoT/default/ConfigSessionAlsaPcm/: Makefile.am
plugins/configs/qcom/IoT/default/ConfigSessionAlsaVoice/: Makefile.am
plugins/configs/qcom/mbb/default/ConfigSessionAlsaCompress/: Makefile.am
plugins/configs/qcom/mbb/default/ConfigSessionAlsaPcm/: Makefile.am
plugins/configs/qcom/mbb/default/ConfigSessionAlsaVoice/: Makefile.am
plugins/configs/qcom/mobile/default/ConfigSessionAlsaCompress/: Makefile.am
plugins/configs/qcom/mobile/default/ConfigSessionAlsaCompress/src/: ConfigSessionAlsaCompress.cpp
plugins/configs/qcom/mobile/default/ConfigSessionAlsaPcm/: Makefile.am
plugins/configs/qcom/mobile/default/ConfigSessionAlsaPcm/src/: ConfigSessionAlsaPcm.cpp
plugins/configs/qcom/mobile/default/ConfigSessionAlsaVoice/: Makefile.am
plugins/vui_interface/: configure.ac
plugins/vui_interface/inc/: SVAInterface.h
plugins/vui_interface/src/: SVAInterface.cpp  VoiceUIInterface.cpp
plugins/vui_interface/sva_intf/: Makefile.am  sva_interface.pc.in
plugins/vui_interface/utils/: Makefile.am  vui_interface_utils.pc.in
public_headers/: config.yml
resource_manager/inc/: ResourceManager.h
resource_manager/src/: ResourceManager.cpp
session/SessionAR/src/: PayloadBuilder.cpp
session/SessionAlsaCompress/src/: SessionAlsaCompress.cpp
session/SessionAlsaPcm/src/: SessionAlsaPcm.cpp
session/SessionAlsaVoice/src/: SessionAlsaVoice.cpp
stream/StreamASR/inc/: ASREngine.h  StreamASR.h
stream/StreamASR/src/: ASREngine.cpp  StreamASR.cpp
utils/inc/: ASRPlatformInfo.h  Status.h
utils/src/: ASRPlatformInfo.cpp  BTUtils.cpp  Status.cpp
