pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = dev_bt.pc
EXTRA_DIST = $(pkgconfig_DATA)

if BUILDSYSTEM_OPENWRT

AM_CPPFLAGS := -I $(top_srcdir)/device/Bluetooth/inc
AM_CPPFLAGS += -I $(top_srcdir)/device/Bluetooth/internal
AM_CPPFLAGS += -I $(top_srcdir)/inc
AM_CPPFLAGS += -I $(top_srcdir)/
AM_CPPFLAGS += -I $(top_srcdir)/utils/inc
AM_CPPFLAGS += -I $(top_srcdir)/device/inc
AM_CPPFLAGS += -I $(top_srcdir)/session/inc
AM_CPPFLAGS += -I $(top_srcdir)/stream/inc
AM_CPPFLAGS += -I $(top_srcdir)/session/SessionAR/inc
AM_CPPFLAGS += -I $(top_srcdir)/plugins/PluginManager/inc
AM_CPPFLAGS += -I $(top_srcdir)/resource_manager/inc
AM_CPPFLAGS += -I $(top_srcdir)/context_manager/inc
AM_CPPFLAGS += -I $(top_srcdir)/plugins/vui_interface/api/vui-interface

dev_bt_sources = ./src/Bluetooth.cpp
else
AM_CPPFLAGS := -I $(top_srcdir)/device/Bluetooth/inc
AM_CPPFLAGS += -I $(top_srcdir)/device/Bluetooth/internal
AM_CPPFLAGS += -I $(top_srcdir)/inc
AM_CPPFLAGS += -I $(top_srcdir)
AM_CPPFLAGS += -I $(top_srcdir)/utils/inc
AM_CPPFLAGS += -I $(top_srcdir)/device/inc
AM_CPPFLAGS += -I $(top_srcdir)/session/inc
AM_CPPFLAGS += -I $(top_srcdir)/stream/inc
AM_CPPFLAGS += -I $(top_srcdir)/sounddose/inc
AM_CPPFLAGS += -I $(top_srcdir)/session/SessionAR/inc
AM_CPPFLAGS += -I $(top_srcdir)/plugins/PluginManager/inc
AM_CPPFLAGS += -I $(top_srcdir)/resource_manager/inc
AM_CPPFLAGS += -I $(top_srcdir)/context_manager/inc
AM_CPPFLAGS += -I $(top_srcdir)/plugins/vui_interface/api/vui-interface
AM_CPPFLAGS += -I $(top_srcdir)/plugins/codecs
AM_CPPFLAGS += @SPF_CFLAGS@
AM_CPPFLAGS += @AROUTE_CFLAGS@
AM_CPPFLAGS += @KVH2XML_CFLAGS@

dev_bt_sources = $(top_srcdir)/device/Bluetooth/src/Bluetooth.cpp
endif


library_includedir = $(includedir)/dev_bt

lib_LTLIBRARIES     = libdev_bt.la
libdev_bt_la_SOURCES   = $(dev_bt_sources)
libdev_bt_la_LIBADD    = @GLIB_LIBS@ -lexpat -ltinyalsa -ltinycompress
libdev_bt_la_LIBADD   += -L${abs_top_builddir}/session/SessionAR/.libs -lsession_ar
libdev_bt_la_LIBADD   += -L${abs_top_builddir}/.libs -lpal
libdev_bt_la_CPPFLAGS := $(AM_CPPFLAGS)
libdev_bt_la_CPPFLAGS += -std=c++17
libdev_bt_la_LDFLAGS   = -shared -avoid-version

libdev_bt_la_CPPFLAGS += @GLIB_CFLAGS@ -include glib.h

libdev_bt_la_CPPFLAGS += -DACD_SM_FILEPATH=\"/etc/models/acd/\"
libdev_bt_la_CPPFLAGS += -D__unused=__attribute__\(\(__unused__\)\) -DLINUX_ENABLED

if CUTILS_SUPPORTED
libdev_bt_la_CPPFLAGS += -DPAL_CUTILS_SUPPORTED
libdev_bt_la_LIBADD += -lcutils
endif

if USE_G_STR_FUNC
libdev_bt_la_CPPFLAGS +=-Dstrlcpy=g_strlcpy -Dstrlcat=g_strlcat
endif

if BUILDSYSTEM_OPENWRT
libdev_bt_la_LIBADD += -lglib-2.0 -llog
else
libdev_bt_la_CPPFLAGS += -DPAL_USE_SYSLOG -DLINUX_ENABLED  -DATRACE_UNSUPPORTED -DCARD_STATE_UNSUPPORTED -DPAL_SIGNAL_HANDLER_UNSUPPORTED -DA2DP_SINK_SUPPORTED -DVUI_DMGR_AUDIO_UNSUPPORTED -DAUDIO_FEATURE_STATS_UNSUPPORTED
endif
